--- a/disponibilidad-busqueda-inteligente/BeckendPanelDeDsiponibilidad/.env
+++ b/disponibilidad-busqueda-inteligente/BeckendPanelDeDsiponibilidad/.env
@@ -1,2 +1,3 @@
-DATABASE_URL=postgresql://postgres:jaG27kjoidPpPFHT@aws-1-us-east-1.pooler.supabase.com:5432/postgres
+SUPABASE_URL=https://lroqfhbdarntyygtrafw.supabase.co
+SUPABASE_ANON_KEY=sb_publishable_SLlPDmjuLQLh_Ii7Xia8ZA_Yo3qm_WO
 PORT=3000
