feat: filtros de propiedades por estado y publico objetivo

--- a/disponibilidad-busqueda-inteligente/BeckendPanelDeDsiponibilidad/.env
+++ b/disponibilidad-busqueda-inteligente/BeckendPanelDeDsiponibilidad/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:jaG27kjoidPpPFHT@aws-1-us-east-1.pooler.supabase.com:5432/postgres
+DATABASE_URL=postgresql://postgres.nkmvnzuahmimtobpqwkf:Pucesm.2025*@aws-1-us-east-1.pooler.supabase.com:5432/postgres
 PORT=3000
