--- a/gestion-inquilinos-contratos/backend/package.json
+++ b/gestion-inquilinos-contratos/backend/package.json
@@ -19,12 +19,14 @@
   "dependencies": {
     "@prisma/client": "^5.10.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.3",
     "express": "^5.2.1",
     "prisma": "^5.10.0"
   },
   "description": "",
   "devDependencies": {
     "@types/cors": "^2.8.19",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
     "@types/node": "^25.0.3",
     "@types/pdfkit": "^0.17.4",
