--- a/backend-unificado/.env.example
+++ b/backend-unificado/.env.example
@@ -10,8 +10,14 @@ DATABASE_URL=postgresql://user:password@host:port/database
 JWT_SECRET=tu-secret-key-super-seguro
 
 # CORS - URL del frontend
-FRONTEND_URL=http://localhost:3000
-CORS_ORIGIN=http://localhost:3000
+FRONTEND_URL="http://localhost:3000"
+CORS_ORIGIN="http://localhost:3000"
+
+# SUPABASE (requerido por módulo de reportes)
+
+SUPABASE_URL="https://your-project.supabase.co"
+SUPABASE_ANON_KEY="your-anon-key"
+SUPABASE_SERVICE_ROLE_KEY="your-service-role-key"
 
 # Ambiente
 NODE_ENV=development
