--- a/gestion-inquilinos-contratos/backend/package.json
+++ b/gestion-inquilinos-contratos/backend/package.json
@@ -21,6 +21,7 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.2",
     "pdfkit": "^0.17.2",
     "prisma": "^5.10.0"
   },
@@ -29,6 +30,7 @@
     "@types/cors": "^2.8.19",
     "@types/dotenv": "^6.1.1",
     "@types/express": "^5.0.6",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^25.0.3",
     "@types/pdfkit": "^0.17.4",
     "nodemon": "^3.1.11",
