--- a/backend-unificado/package.json
+++ b/backend-unificado/package.json
@@ -18,21 +18,23 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "express": "^5.2.1",
+    "compression": "^1.8.1",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
+    "express": "^5.2.1",
     "helmet": "^8.1.0",
-    "morgan": "^1.10.1",
-    "cookie-parser": "^1.4.7",
-    "compression": "^1.8.1"
+    "morgan": "^1.10.1"
   },
   "devDependencies": {
-    "@types/express": "^5.0.6",
-    "@types/cors": "^2.8.19",
-    "@types/morgan": "^1.9.10",
-    "@types/cookie-parser": "^1.4.10",
     "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.10",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.6",
+    "@types/morgan": "^1.9.10",
     "@types/node": "^25.0.3",
+    "@types/pg": "^8.16.0",
+    "pg": "^8.18.0",
     "tsx": "^4.19.2",
     "typescript": "^5.9.3"
   }
